--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
     <h1>Biodata Saya</h1>
-    <p><strong>Nama:</strong> John Doe</p>
-    <p><strong>Tempat, Tanggal Lahir:</strong> Jakarta, 1 Januari 1990</p>
-    <p><strong>Alamat:</strong> Jl. Merdeka No. 123, Jakarta</p>
-    <p><strong>Email:</strong> john.doe@example.com</p>
+    <p><strong>Nama:</strong> Ahmad Dzaky Fakhruddin</p>
+    <p><strong>Tempat, Tanggal Lahir:</strong> Makassar 1 Januari 1990</p>
+    <p><strong>Alamat:</strong> Jl. Merdeka No. 123, Kupang</p>
+    <p><strong>Email:</strong> joemama@example.com</p>
     <p><strong>Telepon:</strong> 081234567890</p>
     <p><strong>Pendidikan Terakhir:</strong> S1 Teknik Informatika</p>
 </body>
