--- a/index.html
+++ b/index.html
@@ -1,26 +1,70 @@
 <!DOCTYPE html>
-<html lang="id">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biodata Sederhana</title>
+    <title>Personal Information</title>
     <style>
         body {
-            font-size: 12px;
+            background-color: #FFFFFF;
+            color: #000000;
             font-family: Arial, sans-serif;
+            line-height: 1.3;
+            text-align: justify;
+        }
+        .container {
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #000000;
+            background-color: #FFFFFF;
+            padding: 10px;
+            text-align: left;
+        }
+        .section {
+            margin-bottom: 40px;
+            border-bottom: 2px solid #000000;
+            padding-bottom: 10px;
+        }
+        .section:last-child {
+            border-bottom: none;
+        }
+        .section-title {
+            font-size: 24px;
+            margin-bottom: 10px;
+            text-align: left;
+        }
+        .section-content {
+            font-size: 14px;
+            text-align: justify;
         }
     </style>
 </head>
-
 <body>
-    <h1>Biodata Saya</h1>
-    <p><strong>Nama:</strong> Ahmad Dzaky Fakhruddin</p>
-    <p><strong>Tempat, Tanggal Lahir:</strong> Makassar 1 Januari 1990</p>
-    <p><strong>Alamat:</strong> Jl. Merdeka No. 123, Kupang</p>
-    <p><strong>Email:</strong> joemama@example.com</p>
-    <p><strong>Telepon:</strong> 081234567890</p>
-    <p><strong>Pendidikan Terakhir:</strong> S1 Teknik Informatika</p>
+    <div class="container">
+        <div class="section">
+            <h2 class="section-title">Personal Information</h2>
+            <div class="section-content">
+                <p><strong>Name:</strong> Ahmad Dzaky Fakhruddin</p>
+                <p><strong>Birthdate:</strong> August 9, 2003</p>
+                <p><strong>Email:</strong> jekiiwokey@gmail.com</p>
+                <p><strong>Phone:</strong> +6282194430388</p>
+            </div>
+        </div>
+        <div class="section">
+            <h1>For Your Information</h1>
+            <p><strong>Website masih dalam pengerjaan</strong>&#128526;</p>
+            <p><strong>Website masih dalam pengerjaan</strong>&#128526;</p>
+            <p><strong>Website masih dalam pengerjaan</strong>&#128526;</p>
+        </div>
+        <div class="section">
+            <h2 class="section-title">Education</h2>
+            <div class="section-content">
+                <p><strong>Bachelor's Degree:</strong> Computer Science</p>
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
