--- a/index.html
+++ b/index.html
@@ -17,41 +17,76 @@
       text-align: center;
       display: flex;
       justify-content: center;
+      margin-top: 45px;
+    
     }
-    body {
-      background-color: black;
+    body {background-color: black;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 800px;
-      margin: 0;
+    }
+    .borderemoji {
+      border: 10px solid #ff06f3;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      padding : 50px;
+      align-items: center;
+      background-color: white;
+      margin-top: 65px;
   }
+    h1 {color:black;
+    font-size: 100px;
+    position: fixed;
+    margin-top: 20px;
+   
+  }
+  
+
+
 </style>
+<body>
+  <div class="borderemoji"></div>
+  <h1 id="emoji">😊</h1>
 
 <button id="tombol" type="button">Pencet aku mas</button>
 
-
-
 <script> 
+  document.addEventListener("DOMContentLoaded", function() {
   let clickcount=0;
   const tombol = document.getElementById("tombol");
-  const image =document.getElementById("image")
-  tombol.addEventListener("click", function(a){
+  const emoji = document.getElementById("emoji");
+  tombol.addEventListener("click", function(){
     clickcount++;
 
     if(clickcount===1){
       tombol.innerHTML = "aw";
+      emoji.style.display = "none";
+      emoji.style.display = "block";
+      emoji.innerHTML = "😳";
     }
 
     else if(clickcount===2){
       tombol.innerHTML = "udah mas";
+      emoji.style.display = "none";
+      emoji.style.display = "block";
+      emoji.innerHTML = "😑";
+      
     }
 
-    else{      tombol.innerHTML = "UDAH WOI";
-  }});
+    else{ tombol.innerHTML = "UDAH WOI";
+    emoji.style.display = "none";
+    emoji.style.display = "block";
+    emoji.innerHTML = "😡";
 
 
+    }
+  });
+});
 
 </script>
 </body>
 </html>
+  
