--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="borderemoji"></div>
   <h1 id="emoji">😊</h1>
 
-<button id="tombol" type="button">Pencet aku mas</button>
+<button id="tombol" type="button">Pencet disini mas</button>
 
 <script> 
   document.addEventListener("DOMContentLoaded", function() {
