--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   const tombol = document.getElementById("tombol");
   const emoji = document.getElementById("emoji");
   tombol.addEventListener("click", function(){
-    for (let clickcount=0; clickcount<3;clickcount++;){
+    for (let clickcount=0; clickcount<3;clickcount++){
     
 
     if(clickcount===1){
