--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   const tombol = document.getElementById("tombol");
   const emoji = document.getElementById("emoji");
   tombol.addEventListener("click", function(){
+    clickcount=0;
     for (let clickcount=0; clickcount<3;clickcount++){
     
 
