--- a/index.html
+++ b/index.html
@@ -59,9 +59,6 @@
   const emoji = document.getElementById("emoji");
   tombol.addEventListener("click", function(){
     clickcount=0;
-    for (let clickcount=0; clickcount<3;clickcount++){
-    
-
     if(clickcount===1){
       tombol.innerHTML = "aw";
       emoji.style.display = "none";
@@ -81,6 +78,13 @@
     emoji.style.display = "none";
     emoji.style.display = "block";
     emoji.innerHTML = "😡";
+
+    if (clickcount >= 3) {
+    clickcount = 0;
+    tombol.innerHTML = "Pencet disini mas";
+    emoji.style.display = "none";
+    emoji.style.display = "block";
+    emoji.innerHTML = "😊";
 
     }}
   });
