--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -81,8 +82,6 @@
     if (clickcount >= 3) {
     clickcount = 0;
     tombol.innerHTML = "Pencet disini mas";
-    emoji.style.display = "none";
-    emoji.style.display = "block";
     emoji.innerHTML = "😊";
 
     }}
